; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_passes.c_gate_rest_of_compilation.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_passes.c_gate_rest_of_compilation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rtl_dump_and_exit = common dso_local global i64 0, align 8
@flag_syntax_only = common dso_local global i64 0, align 8
@errorcount = common dso_local global i64 0, align 8
@sorrycount = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @gate_rest_of_compilation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gate_rest_of_compilation() #0 {
  %1 = load i64, i64* @rtl_dump_and_exit, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %12, label %3

3:                                                ; preds = %0
  %4 = load i64, i64* @flag_syntax_only, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %12, label %6

6:                                                ; preds = %3
  %7 = load i64, i64* @errorcount, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %6
  %10 = load i64, i64* @sorrycount, align 8
  %11 = icmp ne i64 %10, 0
  br label %12

12:                                               ; preds = %9, %6, %3, %0
  %13 = phi i1 [ true, %6 ], [ true, %3 ], [ true, %0 ], [ %11, %9 ]
  %14 = xor i1 %13, true
  %15 = zext i1 %14 to i32
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
